# muprosody

./: .gitignore  LICENSE  MANIFEST.in  README.md  myprosody.py  pyproject.toml
models/: MIGRATION.md
models/onnx/: ETC.onnx  NB.onnx
myprosody-original/: myprosody_original.py
praat/: MLTRNL.praat
src/muprosody/: __main__.py  muprosody.py
src/muprosody/models/onnx/: CART.onnx  KNN.onnx  LDA.onnx  LR.onnx
src/muprosody/praat/: myspsolution.praat
